--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 **/.vs/
 bin/Debug/
 obj/Debug/
+
+helloWorld/helloWorld/bin/Debug/
+helloWorld/helloWorld/obj/Debug/
+
+Circulo/Circulo/bin/Debug/
+Circulo/Circulo/obj/Debug/
