Implementación de los operadores Relacionales

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ helloWorld/helloWorld/obj/Debug/
 
 Circulo/Circulo/bin/Debug/
 Circulo/Circulo/obj/Debug/
+
+OperadoresLogicos/OperadoresLogicos/bin/Debug/
+OperadoresLogicos/OperadoresLogicos/obj/Debug/
+
+OperadorRelacional/OperadorRelacional/bin/Debug/
+OperadorRelacional/OperadorRelacional/obj/Debug/
