Implementacion de los strings

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ OperadoresLogicos/OperadoresLogicos/obj/Debug/
 
 OperadorRelacional/OperadorRelacional/bin/Debug/
 OperadorRelacional/OperadorRelacional/obj/Debug/
+
+Strings/Strings/bin/Debug/
+Strings/Strings/obj/Debug/
