--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ OperadorRelacional/OperadorRelacional/obj/Debug/
 
 Strings/Strings/bin/Debug/
 Strings/Strings/obj/Debug/
+
+ifExample/ifExample/bin/Debug/
+ifExample/ifExample/obj/Debug/
