--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@ Strings/Strings/obj/Debug/
 
 ifExample/ifExample/bin/Debug/
 ifExample/ifExample/obj/Debug/
+
+
+SwitchExample/SwitchExample/bin/Debug/
+SwitchExample/SwitchExample/obj/Debug/
